// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`boxDecorationBreak renders 0 1`] = `
Array [
  .c0 {
  -webkit-box-decoration-break: 0;
  box-decoration-break: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-box-decoration-break: 0;
  box-decoration-break: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-box-decoration-break: 0;
  box-decoration-break: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-box-decoration-break: 0;
  box-decoration-break: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`boxDecorationBreak renders function 1`] = `
Array [
  .c0 {
  -webkit-box-decoration-break: hasnot;
  box-decoration-break: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-box-decoration-break: has;
  box-decoration-break: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-box-decoration-break: hasnot;
  box-decoration-break: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-box-decoration-break: has;
  box-decoration-break: has;
}

<div
    className="c0"
  />,
]
`;

exports[`boxDecorationBreak renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-box-decoration-break: invalid.path.1;
  box-decoration-break: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-box-decoration-break: invalid.path.1;
  box-decoration-break: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-box-decoration-break: invalid.path.1;
  box-decoration-break: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-box-decoration-break: invalid.path.1;
  box-decoration-break: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`boxDecorationBreak renders negative number 1`] = `
Array [
  .c0 {
  -webkit-box-decoration-break: -54881;
  box-decoration-break: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-box-decoration-break: -54881;
  box-decoration-break: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-box-decoration-break: -42365;
  box-decoration-break: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-box-decoration-break: -42365;
  box-decoration-break: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`boxDecorationBreak renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-box-decoration-break: July;
    box-decoration-break: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-box-decoration-break: August;
    box-decoration-break: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-box-decoration-break: September;
    box-decoration-break: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-box-decoration-break: November;
    box-decoration-break: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-box-decoration-break: July;
    box-decoration-break: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-box-decoration-break: August;
    box-decoration-break: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-box-decoration-break: September;
    box-decoration-break: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-box-decoration-break: November;
    box-decoration-break: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-box-decoration-break: May;
    box-decoration-break: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-box-decoration-break: June;
    box-decoration-break: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-box-decoration-break: April;
    box-decoration-break: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-box-decoration-break: November;
    box-decoration-break: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-box-decoration-break: May;
    box-decoration-break: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-box-decoration-break: June;
    box-decoration-break: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-box-decoration-break: April;
    box-decoration-break: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-box-decoration-break: November;
    box-decoration-break: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`boxDecorationBreak renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    -webkit-box-decoration-break: July;
    box-decoration-break: July;
  }
}

@media April {
  .c0 {
    -webkit-box-decoration-break: August;
    box-decoration-break: August;
  }
}

@media January {
  .c0 {
    -webkit-box-decoration-break: September;
    box-decoration-break: September;
  }
}

@media April {
  .c0 {
    -webkit-box-decoration-break: November;
    box-decoration-break: November;
  }
}

@media June {
  .c0 {
    -webkit-box-decoration-break: August;
    box-decoration-break: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-box-decoration-break: July;
    box-decoration-break: July;
  }
}

@media April {
  .c0 {
    -webkit-box-decoration-break: August;
    box-decoration-break: August;
  }
}

@media January {
  .c0 {
    -webkit-box-decoration-break: September;
    box-decoration-break: September;
  }
}

@media April {
  .c0 {
    -webkit-box-decoration-break: November;
    box-decoration-break: November;
  }
}

@media June {
  .c0 {
    -webkit-box-decoration-break: August;
    box-decoration-break: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-box-decoration-break: January;
    box-decoration-break: January;
  }
}

@media April {
  .c0 {
    -webkit-box-decoration-break: December;
    box-decoration-break: December;
  }
}

@media January {
  .c0 {
    -webkit-box-decoration-break: April;
    box-decoration-break: April;
  }
}

@media April {
  .c0 {
    -webkit-box-decoration-break: May;
    box-decoration-break: May;
  }
}

@media June {
  .c0 {
    -webkit-box-decoration-break: June;
    box-decoration-break: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-box-decoration-break: January;
    box-decoration-break: January;
  }
}

@media April {
  .c0 {
    -webkit-box-decoration-break: December;
    box-decoration-break: December;
  }
}

@media January {
  .c0 {
    -webkit-box-decoration-break: April;
    box-decoration-break: April;
  }
}

@media April {
  .c0 {
    -webkit-box-decoration-break: May;
    box-decoration-break: May;
  }
}

@media June {
  .c0 {
    -webkit-box-decoration-break: June;
    box-decoration-break: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`boxDecorationBreak renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-box-decoration-break: 54881;
  box-decoration-break: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-box-decoration-break: 54881;
  box-decoration-break: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-box-decoration-break: 42365;
  box-decoration-break: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-box-decoration-break: 42365;
  box-decoration-break: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`boxDecorationBreak renders string 1`] = `
Array [
  .c0 {
  -webkit-box-decoration-break: July;
  box-decoration-break: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-box-decoration-break: July;
  box-decoration-break: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-box-decoration-break: June;
  box-decoration-break: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-box-decoration-break: June;
  box-decoration-break: June;
}

<div
    className="c0"
  />,
]
`;

exports[`boxDecorationBreak renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-box-decoration-break: DarkSlateBlue;
  box-decoration-break: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-box-decoration-break: DarkSlateBlue;
  box-decoration-break: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-box-decoration-break: DarkSlateBlue;
  box-decoration-break: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-box-decoration-break: DarkSlateBlue;
  box-decoration-break: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
